kubernetes/manifests/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: simple-nginx-pod
  namespace: devops-app
spec:
  containers:
  - name: nginx
    image: nginx:alpine
    ports:
    - containerPort: 80
