kubernetes/manifests/statefulset-pvc.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis-stateful
  namespace: devops-app
spec:
  serviceName: "redis-service"
  replicas: 1
  selector:
    matchLabels:
      app: redis-db
  template:
    metadata:
      labels:
        app: redis-db
    spec:
      containers:
      - name: redis
        image: redis:7-alpine
        ports:
        - containerPort: 6379
        volumeMounts:
        - name: redis-storage
          mountPath: /data
  volumeClaimTemplates:
  - metadata:
      name: redis-storage
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
