kubernetes/manifests/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-app-service-nodeport
  namespace: devops-lab
spec:
  type: NodePort
  selector:
    app: web-app
  ports:
  - name: http
    port: 80
    targetPort: 80
    nodePort: 30080
