kubernetes/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: devops-app
spec:
  type: ClusterIP
  selector:
    app: devops-app
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
